--- a/src/index.css
+++ b/src/index.css
@@ -477,6 +477,11 @@ button.delete ion-icon {
   margin: 10px;
 }
 
+.product a {
+  text-decoration: none;
+  color: #000;
+}
+
 .product h3 {
   margin: 10px 0;
   font-weight: 500;
