--- a/src/index.css
+++ b/src/index.css
@@ -617,3 +617,57 @@ button.add {
   font-size: 17px;
   border-radius: 7px;
 }
+
+.search-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  max-width: 650px;
+  height: 40px;
+  padding:15px;
+  border-radius: 20px;
+  background-color: #f2f2f2;
+}
+
+input[type="text"] {
+  width: 100%;
+  height: 100%;
+  padding: 8px;
+  border: none;
+  font-size: 16px;
+  color: #333;
+  outline: none;
+  background:transparent;
+}
+
+.search-icon {
+  position: absolute;
+  right: 0;
+  font-size: 20px;
+  color: #999;
+  cursor: pointer;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay h2 {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+}
