corrected media errors

--- a/src/index.css
+++ b/src/index.css
@@ -742,7 +742,7 @@ input[type="text"] {
 .hero {
   height: 520px;
   overflow: hidden;
-  background-image: url(http://localhost:3000/static/media/herobanner.0f44e22395f96db9a121.jpg);
+  background-image: url(./assets/herobanner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
